@@ -202,6 +202,37 @@ public interface IAccountCredentialCache {
     );
 
     /**
+     * Returns all of the Credentials matching the supplied criteria from the input list.
+     *
+     * @param homeAccountId    The homeAccountId used to match Credential cache keys.
+     * @param environment      The environment used to match Credential cache keys.
+     * @param credentialType   The sought CredentialType.
+     * @param clientId         The clientId used to match Credential cache keys.
+     * @param applicationIdentifier The physical identifier of the application (Android: packageName/signature)
+     * @param mamEnrollmentIdentifier The Mobile Application Management or Intune App Protection enrollment identifier (Android Only)
+     * @param realm            The realm used to match Credential cache keys.
+     * @param target           The target used to match Credential cache keys.
+     * @param requestedClaims  The requested claims used to match Credential cache keys.
+     * @param mustMatchExactClaims Boolean to specify matching exact claims.
+     * @param inputCredentials The list of credentials to be filtered from.
+     * @return A mutable List of Credentials matching the supplied criteria.
+     */
+    List<Credential> getCredentialsFilteredBy(
+            final String homeAccountId,
+            final String environment,
+            final CredentialType credentialType,
+            final String clientId,
+            final String applicationIdentifier,
+            final String mamEnrollmentIdentifier,
+            final String realm,
+            final String target,
+            final String authScheme,
+            final String requestedClaims,
+            final boolean mustMatchExactClaims,
+            final List<Credential> inputCredentials
+    );
+
+    /**
      * Returns all of the Credentials matching the supplied criteria.
      *
      * @param homeAccountId   The homeAccountId used to match Credential cache keys.
