@@ -388,7 +388,8 @@ public class SharedPreferencesAccountCredentialCacheWithMemoryCache extends Abst
                 target,
                 authScheme,
                 null,
-                null
+                null,
+                false
         );
 
         Logger.verbose(methodTag, "Found [" + matchingCredentials.size() + "] matching Credentials...");
@@ -423,7 +424,8 @@ public class SharedPreferencesAccountCredentialCacheWithMemoryCache extends Abst
                 target,
                 authScheme,
                 null,
-                null
+                null,
+                false
         );
 
         Logger.verbose(methodTag, "Found [" + matchingCredentials.size() + "] matching Credentials...");
@@ -461,7 +463,8 @@ public class SharedPreferencesAccountCredentialCacheWithMemoryCache extends Abst
                 target,
                 authScheme,
                 requestedClaims,
-                null
+                null,
+                false
         );
 
         Logger.verbose(methodTag, "Found [" + matchingCredentials.size() + "] matching Credentials...");
@@ -498,7 +501,47 @@ public class SharedPreferencesAccountCredentialCacheWithMemoryCache extends Abst
                 target,
                 authScheme,
                 requestedClaims,
-                null
+                null,
+                false
+        );
+
+        Logger.verbose(methodTag, "Found [" + matchingCredentials.size() + "] matching Credentials...");
+
+        return matchingCredentials;
+    }
+
+    @Override
+    @NonNull
+    public List<Credential> getCredentialsFilteredBy(
+            @Nullable final String homeAccountId,
+            @Nullable final String environment,
+            @Nullable final CredentialType credentialType,
+            @Nullable final String clientId,
+            @Nullable final String applicationIdentifier,
+            @Nullable final String mamEnrollmentIdentifier,
+            @Nullable final String realm,
+            @Nullable final String target,
+            @Nullable final String authScheme,
+            @Nullable final String requestedClaims,
+            final boolean mustMatchExactClaims,
+            @NonNull final List<Credential> inputCredentials) {
+        final String methodTag = TAG + ":getCredentialsFilteredBy";
+        Logger.verbose(methodTag, "getCredentialsFilteredBy()");
+
+        final List<Credential> matchingCredentials = getCredentialsFilteredByInternal(
+                inputCredentials,
+                homeAccountId,
+                environment,
+                credentialType,
+                clientId,
+                applicationIdentifier,
+                mamEnrollmentIdentifier,
+                realm,
+                target,
+                authScheme,
+                requestedClaims,
+                null,
+                mustMatchExactClaims
         );
 
         Logger.verbose(methodTag, "Found [" + matchingCredentials.size() + "] matching Credentials...");
@@ -534,7 +577,8 @@ public class SharedPreferencesAccountCredentialCacheWithMemoryCache extends Abst
                             target,
                             authScheme,
                             requestedClaims,
-                            null
+                            null,
+                            false
                     )
             );
         }
@@ -570,7 +614,8 @@ public class SharedPreferencesAccountCredentialCacheWithMemoryCache extends Abst
                         target,
                         authScheme,
                         requestedClaims,
-                        kid
+                        kid,
+                        false
                 )
         );
         return result;
